--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -65,3 +65,21 @@ li{
 #invalid-feedback{
   color: darkred;
 }
+
+#fileDropBox {
+  margin-bottom:1em;
+  width: 20em;
+  line-height: 10em;
+  border: 1px dashed gray;
+  text-align: center;
+  color: gray;
+  border-radius: 7px;
+}
+
+.row-create{
+  margin-bottom: 0.5em;
+}
+
+.left{
+  padding-left: 0 !important;
+}
