--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -93,3 +93,11 @@ li{
 .link-img{
   width: 10%!important;
 }
+.rejected-advertisement{
+  border: 3px solid rgba(187, 38, 38, 0.45) !important;
+  background-color: rgba(187, 38, 38, 0.2) !important;
+}
+.confirmed-advertisement{
+  border: 3px solid rgba(33, 166, 68, 0.45) !important;
+  background-color: rgba(33, 166, 68, 0.2) !important;
+}
